[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/enemies/Enemy.gd" type="Script" id=1]
[ext_resource path="res://gfx/enemy.png" type="Texture" id=2]
[ext_resource path="res://scenes/Health.tscn" type="PackedScene" id=3]
[ext_resource path="res://animations/enemies/idle.tres" type="Animation" id=4]
[ext_resource path="res://animations/enemies/attack.tres" type="Animation" id=5]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -4, -19 ) ]
}

[node name="Enemy" type="KinematicBody2D" groups=["enemy"]]
position = Vector2( 39, 280 )
z_index = 5
collision_layer = 4
collision_mask = 11
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 5
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -4, -19 )
z_index = 2
texture = ExtResource( 2 )
hframes = 3

[node name="PathVisual" type="Line2D" parent="."]
visible = false
z_index = 100
z_as_relative = false
width = 5.0
default_color = Color( 1, 0.211765, 0, 1 )

[node name="AttackTime" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="AttackCooldown" type="Timer" parent="."]
one_shot = true

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
collision_mask = 10

[node name="Health" parent="." instance=ExtResource( 3 )]
position = Vector2( -9, -29 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = ExtResource( 4 )
anims/RESET = SubResource( 3 )
anims/attack = ExtResource( 5 )

[connection signal="dead" from="." to="." method="_on_dead"]
[connection signal="hit" from="." to="." method="_on_Enemy_hit"]
[connection signal="timeout" from="AttackTime" to="." method="_on_attack"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_attack_cooldown"]
[connection signal="timeout" from="RespawnTimer" to="." method="_on_stuck_check"]
